# custom-node-qa

./: .gitignore  .prettierignore  API_TESTING_DESIGN.md  CHANGELOG.md  CHECKLIST_TEMPLATE.md  GIT_AUTOMATION_RESEARCH.md  Makefile  QUICK_REFERENCE.md  README.md  START.bat  START.command  START.sh  WORKFLOW_GUIDE.md  checklist-detailed.md  checklist.md  package.json
.github/workflows/: ci.yml  release.yml  rust-ci.yml  validate.yml
checklists/: checklist-detailed.md  checklist.md
checklists/ali/: checklist-detailed.md  checklist.md
checklists/chae/: checklist-detailed.md  checklist.md
checklists/denys/: checklist-detailed.md  (+1 more)
cli/: .clippy.toml  Cargo.toml  Makefile
cli/scripts/: devtools-node-pack-tester.js
cli/src/: git.rs  lib.rs  main.rs
cli/src/commands/: app.rs  check.rs  diff.rs  generate.rs  generate_api_test.rs  import.rs  list.rs  mod.rs  new_project.rs  status.rs  sync.rs  validate.rs
cli/src/generators/: checklist.rs  mod.rs  report.rs
cli/src/models/: checklist.rs  export.rs  metadata.rs  mod.rs  node_pack.rs  workflow.rs
cli/src/parsers/: markdown.rs  mod.rs  workflow_json.rs
cli/src/validators/: checklist_validator.rs  mod.rs  naming_validator.rs  workflow_validator.rs
cli/tests/: checklist_tests.rs  metadata_tests.rs  validation_tests.rs  workflow_tests.rs
findings/: findings.md
scripts/: devtools-node-pack-tester.js  install-cli.sh  qa.js
workflows/: all-nodes-ComfyUI-SCAIL-Pose.json  all-nodes-ComfyUI_Fill-ChatterBox.json  all-nodes-ControlAltAI-Nodes.json  all-nodes-RES4LYF.json  all-nodes-comfyui_layerstyle.json
(+58 files in other folders)
