[package]
name = "comfy-qa"
version = "0.1.0"
edition = "2021"
authors = ["Comfy Org"]
description = "CLI tool for Hanzo Studio custom node QA validation and management"
license = "MIT"

[[bin]]
name = "comfy-qa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
dialoguer = "0.11"
console = "0.15"
open = "5.0"
comfy-table = "6.2"
indicatif = "0.17"

[dev-dependencies]
insta = "1.34"
tempfile = "3.8"
